# chest_segment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  run.py
config/: config.yaml
jupyter_lab/: run.ipynb
src/chest_segment/: checkpoint_saver.py  dataset.py  models.py  test.py  train.py  transforms.py  utils.py
